feat:added following and messagig models, introduced a router to handle app routing, and a util package to handle database connections
