# user-service/models/users.go
@@ -1,10 +1,21 @@
 package models
 
+import (
+	"time"
+
+	"gorm.io/gorm"
+)
+
 type User struct {
-	ID       string `json:"id"`
-	Name     string `json:"name"`
-	UserName string `json:"username"`
-	Email    string `json:"email"`
+	gorm.Model
+	Name      string    `json:"name" gorm:"tableName:users"`
+	UserName  string    `json:"username"`
+	Email     string    `json:"email"`
+	Phone     uint      `json:"phone"`
+	Status    string    `json:"status"`
+	Password  string    `json:"password"`
+	CreatedAt time.Time `json:"createdAt"`
+	UpdatedAt time.Time `json:"updatedAt"`
 }
 
 type CreateUserResponse struct {
